[gd_scene format=3 uid="uid://u0j4dhidi6mt"]

[ext_resource type="Script" uid="uid://b2gbta2j0wpyj" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://k6giabxbblia" path="res://assets/backgrounds/menubg.png" id="2_ekxnf"]

[node name="MainMenu" type="Control" unique_id=515550759]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="Menubg" type="TextureRect" parent="." unique_id=1431857748]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -645.0
offset_top = -368.0
offset_right = 475.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1687499, 1.0263889)
texture = ExtResource("2_ekxnf")

[node name="TitleContainer" type="VBoxContainer" parent="." unique_id=2113204810]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="TitleContainer" unique_id=1562321642]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 72
text = "NetStation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="." unique_id=1197839780]
custom_minimum_size = Vector2(0, 350)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -350.0
offset_right = 160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 30

[node name="StartButton" type="Button" parent="ButtonContainer" unique_id=395446799]
custom_minimum_size = Vector2(320, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Start Game"

[node name="ExitButton" type="Button" parent="ButtonContainer" unique_id=1470010470]
custom_minimum_size = Vector2(320, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Exit Game"
